# pyweb-hw-13

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 5c341a79997c_add_confirmed_for_user.py  8c464c3d23aa_add_created_at_in_tokens.py  e248a647931a_add_avatar.py  e5d2611330ed_removed_field_in_tokens.py  fd1e57bbc71d_init.py
src/conf/: config.py
src/dependencies/: database.py
src/models/: __init__.py  contact.py  users.py
src/repositories/: contacts.py  users.py
src/routers/: auth.py  contacts_items.py  users.py
src/schemas/: contact.py  user.py
src/services/: auth.py  contact.py  email.py  users.py
src/templates/: reset_password.html  verify_email.html
